<resources>
    <string name="app_name">ToDo</string>
    <string name="hello_there">Hello there,</string>
    <string name="hello_there_name">Hello there,\nName</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_with_google">LOGIN WITH GOOGLE</string>
    <string name="sign_up_with_google">SIGN UP WITH GOOGLE</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="need_account">Need an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="web_id">1004868812453-vee8vnc7ss7qhopl4k55he1ghbg1duk4.apps.googleusercontent.com</string>
    <string name="title">Title</string>
    <string name="number_of_tasks">no. Tasks</string>
    <string name="add_new">Add new</string>
    <string name="new_task">New Task</string>
    <string name="cancel">Cancel</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="create">Create</string>
    <string name="may_29_14_00">May 29, 14:00</string>
    <string name="add_note">Add note</string>
    <string name="category">Category</string>
    <string name="all_notes">All notes</string>
    <string name="music">Music</string>
    <string name="work">Work</string>
    <string name="trips">Trips</string>
    <string name="studies">Studies</string>
    <string name="home">Home</string>
    <string name="shopping">Shopping</string>
    <string name="all_tasks">All Tasks</string>
    <string name="category_cannot_be_empty">Category cannot be empty</string>
    <string name="task_cannot_be_empty">Task cannot be empty</string>
    <string name="back">Back</string>
    <string name="menu_button">Menu button</string>
    <string name="count">Count</string>
    <string name="add_task">Add Task</string>
    <string name="date">Date</string>
    <string name="please_pick_a_date">Please pick a date</string>
    <string name="completed">Completed</string>
    <string name="delete_task">Delete Task</string>
    <string name="privateTask">Private</string>
    <string name="profileimage">ProfileImage</string>
    <string name="see_note">See Note</string>
    <string name="hide_note">Hide note</string>
    <string name="sort_by_created_date">Sort by create date</string>
    <string name="sort_by_due_time">Sort by Due Time</string>
</resources>