<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/APP_SCREEN_COLOR"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3.5"
    tools:context=".sign_up">

    <TextView
        style="@style/TEXT_COLOR"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="bottom"
        android:paddingStart="@dimen/dp40"
        android:paddingEnd="0dp"
        android:text="@string/app_name"
        android:textSize="@dimen/dp32"
        android:textStyle="bold" />

    <TextView
        style="@style/TEXT_COLOR"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp40"
        android:paddingEnd="0dp"
        android:text="@string/hello_there"
        android:textSize="@dimen/dp24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:divider="@drawable/empty_divider"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp30"
        android:paddingEnd="@dimen/dp30"
        android:showDividers="middle">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailINP"
            style="@style/EDIT_TEXT_STYLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/dp15"
            android:hint="@string/email"
            android:paddingStart="@dimen/dp10"
            android:paddingEnd="0dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordINP"
            style="@style/EDIT_TEXT_STYLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp15"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingStart="@dimen/dp10"
            android:paddingEnd="0dp" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirmPasswordINP"
            style="@style/EDIT_TEXT_STYLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp15"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:paddingStart="@dimen/dp10"
            android:paddingEnd="0dp" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        style="@style/SIGN_IN_UP_BUTTON"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp30"
        android:layout_weight="0.23"
        android:text="@string/sign_up" />

    <RelativeLayout
        android:id="@+id/googleLoginRL"
        style="@style/GOOGLE_LOGIN_BUTTON"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp30"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp30"
        android:layout_weight="0.23">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:contentDescription="@string/sign_up"
                android:padding="@dimen/dp8"
                android:src="@drawable/google_search" />

            <TextView
                style="@style/TEXT_COLOR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/sign_up_with_google" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <TextView
        style="@style/TEXT_COLOR"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:text="@string/have_account"
        android:textSize="@dimen/dp14" />

    <TextView
        android:id="@+id/loginButton"
        style="@style/TEXT_COLOR"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp10"
        android:layout_weight="0.1"
        android:text="@string/log_in"
        android:textSize="@dimen/dp14" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35" />


</LinearLayout>