<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/APP_SCREEN_COLOR"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_tasks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp10"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/TEXT_COLOR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/new_task"
                android:textSize="@dimen/dp22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/cancelButton"
                style="@style/TEXT_COLOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="end"
                android:text="@string/cancel"
                android:textSize="@dimen/dp16" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEnterTask"
            style="@style/TEXTINPUTLAYOUT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:minHeight="@dimen/dp150"
            app:boxStrokeWidth="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterTask"
                style="@style/TEXT_COLOR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/what_s_on_your_mind"
                android:maxLines="4"
                android:textSize="@dimen/dp16"
                tools:ignore="SpUsage" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp20"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/dp20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bellIcon"
                android:layout_width="@dimen/dp36"
                android:layout_height="@dimen/dp36"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp20"
                android:padding="@dimen/dp10"
                android:src="@drawable/bell" />

            <TextView
                android:id="@+id/datePickerTV"
                style="@style/TEXT_COLOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/may_29_14_00"
                android:textSize="@dimen/dp14"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/datePickerTVError"
                style="@style/TEXT_COLOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp10"
                android:textColor="@color/red"
                android:text="@string/please_pick_a_date"
                android:textSize="@dimen/dp14"
                tools:ignore="SpUsage" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/addNoteCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/dp16"
            app:strokeColor="@color/iron">

            <EditText
                android:id="@+id/extraNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/add_note"
                android:maxLines="5"
                android:padding="@dimen/dp10"
                android:textSize="@dimen/dp16"
                tools:ignore="SpUsage" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/dp20"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp36"
                android:layout_height="@dimen/dp36"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp20"
                android:padding="@dimen/dp10"
                android:src="@drawable/tags" />

            <TextView
                android:id="@+id/category"
                style="@style/TEXT_COLOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/category"
                android:textSize="@dimen/dp14"
                tools:ignore="SpUsage" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/addCategoryCardView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp75"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:visibility="visible"
            android:focusable="true"
            android:minHeight="@dimen/dp72"
            app:cardCornerRadius="@dimen/dp16"
            app:strokeColor="@color/iron">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/allTask"
                        android:layout_width="@dimen/dp65"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp24"
                            android:layout_height="@dimen/dp24"
                            android:layout_gravity="center"
                            android:src="@drawable/alltask" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/all_tasks" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/privateTask"
                        android:layout_width="@dimen/dp65"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp24"
                            android:layout_height="@dimen/dp24"
                            android:layout_gravity="center"
                            android:src="@drawable/personal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/privateTask" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/workTask"
                        android:layout_width="@dimen/dp65"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp24"
                            android:layout_height="@dimen/dp24"
                            android:layout_gravity="center"
                            android:src="@drawable/work" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/work" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/shoppingTask"
                        android:layout_width="@dimen/dp65"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp24"
                            android:layout_height="@dimen/dp24"
                            android:layout_gravity="center"
                            android:src="@drawable/cart" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/shopping" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/tripTask"
                        android:layout_width="@dimen/dp65"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp24"
                            android:layout_height="@dimen/dp24"
                            android:layout_gravity="center"
                            android:src="@drawable/plane" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/trips" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/studyTask"
                        android:layout_width="@dimen/dp65"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp24"
                            android:layout_height="@dimen/dp24"
                            android:layout_gravity="center"
                            android:src="@drawable/book" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/studies" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/homeTask"
                        android:layout_width="@dimen/dp65"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp24"
                            android:layout_height="@dimen/dp24"
                            android:layout_gravity="center"
                            android:src="@drawable/house" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/home" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/musicTask"
                        android:layout_width="@dimen/dp65"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dp24"
                            android:layout_height="@dimen/dp24"
                            android:layout_gravity="center"
                            android:src="@drawable/music" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/music" />

                    </LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp60"
        android:background="@color/dark_sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/TEXT_COLOR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create"
            android:textSize="@dimen/dp16" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>